# ai-agents-bots

./: .env.example  .gitignore  README.md  agent-bots.py  agent-version1.py  agent_bots.py  agent_version1.py  agent_version2.py  alembic.ini  config.toml  connect_asana.py  open_chat_bot.md  open_chat_bot.py  pm_integration_test.py  project_management_bot.py  requirements.txt  slack_bot.py
.github/workflows/: deploy.yml
.specstory/history/: 2025-03-15_05-52-update-help-command-with-expert-details.md
api/: API.md  README.md  main_api.py
api/icp_rust_agent/: .env.two  .gitignore  API.md  Cargo.toml  README.md  deploy_playground.sh  setup_locally.sh
api/icp_rust_agent/.github/workflows/: deploy.yml
api/icp_rust_agent/scripts/: deploy_playground.sh  run.sh
api/icp_rust_agent/src/: main.rs  slack.rs
core/: __init__.py  agent_bots.py
core/integrations/: base.py  trello_integration.py  user_credentials.py
core/knowledge_bases/: ali.txt  benny.txt  dean.txt  liech.txt  muoka.txt  nelly.txt  (+1 more)
database/: db.py  models.py  operations.py
discord-bot/: README.md  package-lock.json  package.json  tsconfig.json
infoundr2/: Cargo.toml  config.toml  identity.pem
integrations/: __init__.py  asana_integration.py  asana_oauth.py  base.py  github_integration.py  jira_integration.py  manager.py  user_credentials.py
knowledge_bases/: Innocent.txt  caleb.txt  felix.txt  matt.txt  sheila.txt
open-chat/: .gitignore  Cargo.toml  NGINX_SETUP.md  README.md  config.toml  infoundr_identity.pem  interacting_bot.md  logic.md  new_key.pem
open-chat/src/open-chat-bot/: .gitignore  Cargo.toml  README.md  logic.md
open-chat/src/open-chat-bot/src/: config.rs  main.rs
slack/: slack_bot.py
tokens/: dccg7-xmaaa-aaaaa-qaamq-cai.json  test_user_123.json
(+20 files in other folders)
