[package]
name = "icp_rust_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
url = "2.5.0"
ic-agent = "0.40.1"
candid = "0.10.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"